<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>

    <!-- Done: Add necessary string values -->
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="find_my_representatives">Find my representatives</string>
    <string name="follow_election">Follow Election</string>
    <string name="unfollow_election">Unfollow Election</string>
    <string name="representative_search">Representative Search</string>
    <string name="use_my_location">Use my location</string>
    <string name="my_representatives">My Representatives</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="corresponding_address">Corresponding address</string>
    <string name="election_information">Election Information</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="ok">OK</string>

</resources>
