<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:motion="http://schemas.android.com/tools">

    <!-- Done: Add data binding node -->
    <data>

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />
    </data>

    <!-- TODO: Add motion scene to hide form on vertical scroll. -->
    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/default_spacing">

        <!-- Done: Add visual styling and content -->
        <TextView
            android:id="@+id/search_title"
            style="@style/RepresentativeTitle"
            android:text="@string/representative_search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Done: Add data binding value -->
        <!-- Done: Add visual styling and content -->
        <EditText
            android:id="@+id/address_line_1"
            style="@style/RepresentativeAddress"
            android:hint="@string/address_line_1"
            android:text="@{viewModel.address.line1}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_title" />

        <!-- Done: Add data binding value -->
        <!-- Done: Add visual styling and content -->
        <EditText
            android:id="@+id/address_line_2"
            style="@style/RepresentativeAddress"
            android:hint="@string/address_line_2"
            android:text="@{viewModel.address.line2}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_line_1" />

        <!-- Done: Add data binding value -->
        <!-- Done: Add visual styling and content -->
        <EditText
            android:id="@+id/city"
            style="@style/RepresentativeCity"
            android:hint="@string/city"
            android:text="@{viewModel.address.city}"
            app:layout_constraintEnd_toStartOf="@id/state"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_line_2" />

        <!-- Done: Add default values from provided resources  -->
        <!-- Done: Add data binding value -->
        <!-- Done: Add visual styling and content -->
        <Spinner
            android:id="@+id/state"
            style="@style/RepresentativeState"
            stateValue="@{viewModel.address.state}"
            app:layout_constraintBottom_toBottomOf="@id/city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/city"
            app:layout_constraintTop_toTopOf="@id/city" />

        <!-- Done: Add data binding value -->
        <!-- Done: Add visual styling and content -->
        <EditText
            android:id="@+id/zip"
            style="@style/RepresentativeZip"
            android:hint="@string/zip"
            android:text="@{viewModel.address.zip}"
            app:layout_constraintEnd_toEndOf="@id/city"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/city" />

        <!-- Done: Add visual styling and label -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_search"
            style="@style/Button"
            android:layout_marginTop="@dimen/default_spacing"
            android:text="@string/find_my_representatives"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/zip" />

        <!-- Done: Add visual styling and content -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_location"
            style="@style/Button"
            android:layout_marginTop="@dimen/default_spacing"
            android:text="@string/use_my_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_search" />

        <!-- Done: Add visual styling and content -->
        <TextView
            android:id="@+id/representative_title"
            style="@style/RepresentativeTitle"
            android:layout_marginTop="@dimen/default_spacing"
            android:text="@string/my_representatives"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_location" />

        <!-- Done: Add Representatives RecyclerView -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_representatives"
            style="@style/Empty"
            android:liveData="@{viewModel.representativeList}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/representative_title" />

        <!-- Done: Add visual styling and content -->
        <TextView
            android:id="@+id/list_placeholder"
            style="@style/RepresentativePlaceholder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/representative_title"
            motion:visibilityMode="ignore" />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>