<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Done: Add data binding node for Voter Info ViewModel -->
    <data>
        <import type="android.view.View" />
        <import type="android.text.TextUtils" />

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.election.VoterInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Done: Add title to toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/election_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            android:background="@color/colorPrimaryDark"
            app:titleTextColor="@color/white"
            android:singleLine="true"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@{viewModel.election.name}" />

        <!-- Done: Add visual styling -->
        <TextView
            android:id="@+id/election_date"
            style="@style/VoterInfoDate"
            android:text="@{viewModel.election.electionDay.toString()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/election_name" />

        <!-- Done: Add visual styling and content -->
        <TextView
            android:id="@+id/state_header"
            style="@style/VoterInfoHeader"
            android:text="@string/election_information"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/election_date" />

        <!-- Done: Add click binding to open web URL -->
        <!-- Done: Add visual styling and content -->
        <TextView
            android:id="@+id/state_locations"
            style="@style/Wrap"
            android:onClick="@{()->viewModel.intentUrl(viewModel.voterInfo.state[0].electionAdministrationBody.votingLocationFinderUrl)}"
            android:visibility='@{TextUtils.isEmpty(viewModel.voterInfo.state[0].electionAdministrationBody.votingLocationFinderUrl) ? View.GONE : View.VISIBLE}'
            android:text="@string/voting_locations"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_header" />

        <!-- Done: Add click binding to open web URL -->
        <!-- Done: Add visual styling and content -->
        <TextView
            android:id="@+id/state_ballot"
            style="@style/Wrap"
            android:text="@string/ballot_information"
            android:onClick="@{()->viewModel.intentUrl(viewModel.voterInfo.state[0].electionAdministrationBody.electionInfoUrl)}"
            android:visibility='@{TextUtils.isEmpty(viewModel.voterInfo.state[0].electionAdministrationBody.electionInfoUrl) ? View.GONE : View.VISIBLE}'
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_locations" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/address_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="state_correspondence_header,address" />

        <!-- Done: Add visual styling and content -->
        <TextView
            android:id="@+id/state_correspondence_header"
            style="@style/VoterInfoHeader"
            android:text="@string/corresponding_address"
            android:visibility="@{TextUtils.isEmpty(viewModel.voterInfo.state.get(0).electionAdministrationBody.correspondenceAddress.toFormattedString()) ? View.GONE : View.VISIBLE}"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_ballot" />

        <!-- Done: Add data binding -->
        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.voterInfo.state.get(0).electionAdministrationBody.correspondenceAddress.toFormattedString()}"
            android:visibility="@{TextUtils.isEmpty(viewModel.voterInfo.state.get(0).electionAdministrationBody.correspondenceAddress.toFormattedString()) ? View.GONE : View.VISIBLE}"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_correspondence_header" />

        <!-- Done: Add button to save election to Room -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_follow"
            style="@style/Button"
            android:layout_margin="@dimen/default_spacing"
            android:text="@{viewModel.isFollowed ? @string/unfollow_election : @string/follow_election}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>